fix gap icons

--- a/src/app/pages/competence-detail/competence-detail.component.scss
+++ b/src/app/pages/competence-detail/competence-detail.component.scss
@@ -18,9 +18,17 @@
     align-items: center;
     justify-content: center;
     font-size: 2.5rem;
+    line-height: 1;
     box-shadow: var(--shadow-md);
     flex-shrink: 0;
     border: 1px solid var(--color-border);
+
+    > span, > i {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      line-height: 0;
+    }
   }
 
   &__title {
